Fixed alignment issue in CSS.

--- a/Style.css
+++ b/Style.css
@@ -18,6 +18,7 @@ body, button{
 #filters{
     float: left;
     width: 18%;
+    text-align: left;
 }
 #gameSpace{
     float: left;
